# Charxed

./: .clang-tidy  CMakeLists.txt  README.md  TODO.md
cmake/toolchain/: aarch64-linux-gnu.cmake
docs/: CPP-GUIDE.md  Troubleshooting.md  commands.md  configuration.md  help.md  keymaps.md  modes.md  mouse.md
resource/config/: colorscheme.json  config.json
src/: buffer.cpp  buffer.h  buffer_manager.cpp  buffer_manager.h  buffer_old.cpp  buffer_view.cpp  buffer_view.h  character.cpp  character.h  clipboard.cpp  clipboard.h  cmd_parse.cpp  cmd_parse.h  cmp_menu.cpp  cmp_menu.h  command_manager.cpp  command_manager.h  commands.cpp  completer.cpp  completer.h  constants.h  cursor.cpp  cursor.h  diff.cpp  diff.h  draw.cpp  draw.h  editor.cpp  editor.h  editor_event_manager.cpp  editor_event_manager.h  event_loop.cpp  event_loop.h  exception.cpp  exception.h  explorer.cpp  explorer.h  file.cpp  file.h  filetype.cpp  (+59 more)
src/lsp/: client.cpp  client.h  data.h  rpc.cpp  rpc.h
test/: buffer_naive.cpp  buffer_naive.h  clipboard_test.cpp  data_structure_test.cpp  fs_test.cpp  history_test.cpp  json_test.cpp  logging_test.cpp  lsp_test.cpp  subprocess_test.cpp  test_sample.txt  text_tree_test.cpp  unicode_test.cpp  xxx_manager_test.cpp
